Fixing visualization issue on smaller screens for galleries

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11586,8 +11586,40 @@ body {
   background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
-          background-clip: text;
 }
+
+.bloghead h2, .bloghead .h2 {
+  max-width: 20rem;
+  font-size: 1rem;
+}
+@media (min-width: 200px) {
+  .bloghead h1, .bloghead .h1 {
+    font-size: 2rem;
+    line-height: 2rem;
+  }
+}
+@media (min-width: 768px) {
+  .bloghead h1, .bloghead .h1 {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+}
+@media (min-width: 992px) {
+  .bloghead {
+    height: 100vh;
+    padding: 0;
+  }
+  .bloghead h1, .bloghead .h1 {
+    font-size: 6.5rem;
+    line-height: 6.5rem;
+    letter-spacing: 0.8rem;
+  }
+  .bloghead h2, .bloghead .h2 {
+    max-width: 30rem;
+    font-size: 1.25rem;
+  }
+}
+
 
 .masthead h1, .masthead .h1 {
   font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
